--- a/public/stylesheets/sass/_pages.scss
+++ b/public/stylesheets/sass/_pages.scss
@@ -25,7 +25,7 @@
 // Signup
 
 .signup {
-    .category-pill {
+    .option-pill {
         border: 1px solid #d3d3d3;
         border-radius: 25px;
         filter: drop-shadow(0px 2px 4px rgba(51, 16, 50, 0.15));
